# payload

./: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  env.example  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
AI/: README.md  architecture.md  customization.md  decisions.md  design-system.md  domain-model.md  overview.md  roadmap.md  tech-stack.md  vm-lifecycle.md  vm-templates.md
AI/integrations/: guacamole.md  hackclub-oidc.md  proxmox.md
AI/runbooks/: README.md  allowlist-update.md  bake-companion-agent.md  build-linux-template.md  deploy-payload-lxc.md  guacamole-down.md  orphan-cleanup.md  rebuild-template.md  setup-guacamole-lxc.md  template-switch-to-xrdp.md
agent/: Cargo.toml  README.md
agent/src/: log.rs  main.rs  protocol.rs  spool.rs  tasks.rs
app/controllers/: application_controller.rb  dashboard_controller.rb  sessions_controller.rb  (+1 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  reviewers.yml  routes.rb
db/: schema.rb  seeds.rb
drizzle/: 0000_overrated_korvac.sql  0001_vm_types.sql  0002_green_electro.sql  0003_dusty_blacklash.sql  0004_add_vm_types_icon_url.sql  0005_add_vm_types_boot_delay.sql  0006_bent_electro.sql  0007_material_malcolm_colcord.sql  0008_faithful_grandmaster.sql  0009_stiff_warstar.sql  0010_demonic_molly_hayes.sql  0011_quiet_doorman.sql  0012_fresh_mystique.sql  0013_ambitious_naoko.sql
scripts/: migrate.ts  payload.ts  seed.ts  test-analyze.ts
src/: auth.ts  env.ts  instrumentation.ts
(+134 files in other folders)
